# conditional-conformal

./: .gitattributes  .gitignore  AdultIncomeData.ipynb  CVForRKHS.ipynb  LICENSE  QRvsCQRvsAdaptGroupExp.ipynb  README.md  Sandbox.ipynb  Synthetic data (RKHS).ipynb  Synthetic data (group).ipynb  Synthetic data.ipynb  Synthetic_data_RKHS.ipynb  Synthetic_data_generation.py  Synthetic_data_group.ipynb  Untitled.ipynb  WILDSExperiments.ipynb  density_estimation.py  gcc.py  group.py  pyproject.toml  requirements.txt  rkhs.py  setup.py  synthetic_data.py  temperatureScaling.py
.ipynb_checkpoints/: AdultIncomeData-checkpoint.ipynb  CVForRKHS-checkpoint.ipynb  CandCData-checkpoint.ipynb  QRvsCQRvsAdaptExp-checkpoint.ipynb  QRvsCQRvsAdaptGroupExp-checkpoint.ipynb  Synthetic data (RKHS)-checkpoint.ipynb  Synthetic data (group)-checkpoint.ipynb  Synthetic_data_RKHS-checkpoint.ipynb  Synthetic_data_group-checkpoint.ipynb
conditional-conformal/: __init__.py  synthetic_data.py
conditionalconformal/: condconf.py  synthetic_data.py
experiments/: CCCVersusComplexity.ipynb  CandCData.ipynb  InterpolationResults.ipynb  SyntheticData.ipynb  Untitled.ipynb  WILDSExperiments.ipynb  crossval.py  gcc.py  synthetic_trial.py  temperatureScaling.py
experiments/.ipynb_checkpoints/: SyntheticData-checkpoint.ipynb
experiments/data/: agnostic_results.pkl  agnostic_results_2.pkl  agnostic_results_3.pkl  agnostic_results_4.pkl  group_results.pkl  groups_results.pkl  (+2 more)
old_notebooks/: AdultIncomeData.ipynb  CVForRKHS.ipynb  QRvsCQRvsAdaptExp.ipynb  Sandbox.ipynb  SelfDrivingExample.ipynb
